# Differentiator

./: CMakeLists.txt  main.cpp
Differentiator/: Differentiator.cpp  Differentiator.h
RecursiveDescentParser/: RDP.cpp  RDP.h
TreeLib/: Node.cpp  Tree.cpp  TreeLib.cpp  TreeLib.h  debug.h  print_tree.cpp  print_tree.h  simplification.cpp  simplification.h
decoder/: decoder.cpp  decoder.h
